--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
             <div class="carousel-caption d-md-block">
               <h2>Está querendo tirar o projeto do papel?</h5>
               <p>Nossa equipe de engenharia de software está pronta para lhe atender.</p>
+              <p> Tomada= corrente alternada, fonte= corrente continua
+alto e baixo desempenho dos computadores
+Gforce - Placa off board para melhor desempenho
+Placa on board ja há as outras placas.
+Terceiro pino da tomada é chamado de fio terra.
+Memorias melhoram o desempenho.
+Pesquisa sobre Quartzo -Cristal-
+                Pratica de montagem e desmontagem - programação- dos computadores na sala 5. </p>
               <a href="#" class="main-btn">Entre em contato</a>
             </div>
           </div>
