--- a/index.html
+++ b/index.html
@@ -77,15 +77,14 @@
             <img src="img/banner2.png" class="d-block w-100" alt="Engenharia de software">
             <div class="carousel-caption d-md-block">
               <h2>Está querendo tirar o projeto do papel?</h5>
-              <p>Nossa equipe de engenharia de software está pronta para lhe atender.</p>
-              <p> Tomada= corrente alternada, fonte= corrente continua
-alto e baixo desempenho dos computadores
-Gforce - Placa off board para melhor desempenho
-Placa on board ja há as outras placas.
-Terceiro pino da tomada é chamado de fio terra.
-Memorias melhoram o desempenho.
-Pesquisa sobre Quartzo -Cristal-
-                Pratica de montagem e desmontagem - programação- dos computadores na sala 5. </p>
+              <p> Tomada= corrente alternada, fonte= corrente continua</p>
+<p> alto e baixo desempenho dos computadores</p>
+<p> Gforce - Placa off board para melhor desempenho</p>
+<p> Placa on board ja há as outras placas.</p>
+<p> Terceiro pino da tomada é chamado de fio terra.</p>
+<p> Memorias melhoram o desempenho.</p>
+<p> Pesquisa sobre Quartzo -Cristal-</p>
+               <p> Pratica de montagem e desmontagem - programação- dos computadores na sala 5. </p>
               <a href="#" class="main-btn">Entre em contato</a>
             </div>
           </div>
