--- a/index.html
+++ b/index.html
@@ -349,8 +349,7 @@
     <div id="copy-area">
       <div class="container">
         <div class="row">
-            <div class="col-md-12">
-              <p>Desenvolvido por <a href="https://github.com/professorjar" target="_blank">BVS-Gestão de projetos</a> &copy; 2021</p>
+            <div class="col-md-12"
             </div>
         </div>
       </div>
